Add missing content

--- a/reports/index.html
+++ b/reports/index.html
@@ -34,7 +34,7 @@ title: Patrick O. Perry - Reports
 
 
     <li>
-      <a href="http://ptrckprry.com/pdfs/svd-hdd.pdf">The singular value decomposition and high-dimensional data</a>.
+      <a href="svd-hdd.pdf">The singular value decomposition and high-dimensional data</a>.
       With G. I. Allen.
       <cite>Encyclopedia of Environmetrics</cite>,
       second edition,
