Add nicer r-intro output

--- a/course/honors/index.html
+++ b/course/honors/index.html
@@ -14,6 +14,6 @@ stylesheet: /css/main.css?v=1
 
 <h2>Lecture Notes</h2>
 <ul>
-    <li><a href="r-intro.html">Introduction to R</a>
+    <li><a href="r-intro">Introduction to R</a>
 </ul>
 </main>
