Add counting handout

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -28,6 +28,8 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="lecture/intro-prob.pdf">Sep 11 - Introduction to Probability</a>
     (<a href="lecture/intro-prob-sol.pdf">Solutions</a>)
+  <li><a href="lecture/counting.pdf">Sep 15 - Complementary Events / Counting</a>
+    (<a href="lecture/counting-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
