Add office hours

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -6,6 +6,17 @@ stylesheet: /css/main.css?v=1
 <main class="wrapper">
 <h1>STAT-UB.0103: Statistics for Business Control and Regression&nbsp;Models</h1>
 
+<h2>Course Staff</h2>
+<dl>
+  <dt>Instructor</dt>
+  <dd>Prof. Perry (pperry@stern.nyu.edu)</dd>
+  <dd>Office Hours: Monday, Thursday 11:00AM-12:30PM, KMC 8-63</dd>
+
+  <dt>Teaching Fellow</dt>
+  <dd>Adarsh Gupta (amg836@stern.nyu.edu)</dd>
+  <dd>Office Hours: Tuesday, Wednesday, 11:00AM-12:00PM, Tisch UC-01</dd>
+</dl>
+
 <h2>Lecture Notes</h2>
 <ul>
   <li><a href="lecture/biased-samples.pdf">Sep 3 - Biased Samples</a>
