--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -62,5 +62,9 @@ stylesheet: /css/main.css?v=1
       <li>Email your group members' names to the TA before 11:59&nbsp;PM on Friday, Sep&nbsp;12</li>
       <li>Email your data and scatterplot to the professor before 11:59&nbsp;PM on Sunday, Sep&nbsp;21</li>
     </ul>
+  <li><a href="hw/hw03.pdf">Homework #3</a> (Due Sep&nbsp;24)
+    <ul>
+      <li><a href="data/SWDEFECTS.CSV">SWDEFECTS.CSV</a>
+    </ul>
 </ul>
 </main>
