Add hw01 solutions

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -46,9 +46,10 @@ stylesheet: /css/main.css?v=1
 <h2>Handouts and Assignments</h2>
 <ul>
   <li><a href="handout/syllabus.pdf">Syllabus</a>
-  <li><a href="http://goo.gl/bvGCL0">Class Survey</a> (Due Sep&nbsp;4)
+  <li><a href="http://goo.gl/bvGCL0">Class Survey</a>
   <li><a href="handout/minitab-tips.pdf">Minitab Tips</a>
-  <li><a href="hw/hw01.pdf">Homework #1</a> (Due Sep&nbsp;10)
+  <li><a href="hw/hw01.pdf">Homework #1</a>
+    (<a href="hw/hw01sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/97EMPLOY.CSV">97EMPLOY.CSV</a>
       <li><a href="data/HONEYCOUGH.CSV">HONEYCOUGH.CSV</a>
