Switch to en-dashes

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -10,11 +10,11 @@ stylesheet: /css/main.css?v=1
 <dl>
   <dt>Instructor</dt>
   <dd>Prof. Perry (pperry@stern.nyu.edu)</dd>
-  <dd>Office Hours: Monday, Thursday 11:00AM-12:30PM, KMC 8-63</dd>
+  <dd>Office Hours: Monday, Thursday 11:00AM&ndash;12:30PM, KMC 8-63</dd>
 
   <dt>Teaching Fellow</dt>
   <dd>Adarsh Gupta (amg836@stern.nyu.edu)</dd>
-  <dd>Office Hours: Tuesday, Wednesday, 11:00AM-12:00PM, Tisch UC-01</dd>
+  <dd>Office Hours: Tuesday, Wednesday, 11:00AM&ndash;12:00PM, Tisch UC-01</dd>
 </dl>
 
 <h2>Lecture Notes</h2>
