Add conditional probability handout

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -41,6 +41,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/intro-prob-sol.pdf">Solutions</a>)
   <li><a href="lecture/counting.pdf">Sep 15 - Complementary Events / Counting</a>
     (<a href="lecture/counting-sol.pdf">Solutions</a>)
+  <li><a href="lecture/conditional-prob.pdf">Sep 17 - Conditional Probability</a>
+    (<a href="lecture/conditional-prob-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
