--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -43,6 +43,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/counting-sol.pdf">Solutions</a>)
   <li><a href="lecture/conditional-prob.pdf">Sep 17 - Conditional Probability</a>
     (<a href="lecture/conditional-prob-sol.pdf">Solutions</a>)
+  <li><a href="lecture/indep.pdf">Sep 18 - Independence</a>
+    (<a href="lecture/indep-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
