--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -10,4 +10,7 @@ stylesheet: /css/main.css?v=1
 </ul>
 
 <h2>Handouts and Assignments</h2>
+<ul>
+  <li><a href="handout/syllabus.pdf">Syllabus</a>
+</ul>
 </main>
