Add class survey link

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -12,5 +12,6 @@ stylesheet: /css/main.css?v=1
 <h2>Handouts and Assignments</h2>
 <ul>
   <li><a href="handout/syllabus.pdf">Syllabus</a>
+  <li><a href="http://goo.gl/hs16Kk">Class Survey</a>
 </ul>
 </main>
