Add more R chapters

--- a/course/honors/index.html
+++ b/course/honors/index.html
@@ -12,8 +12,11 @@ stylesheet: /css/main.css?v=1
 </ul>
 
 
-<h2>Lecture Notes</h2>
+<h2>Notes on R</h2>
 <ul>
-    <li><a href="r-intro">Introduction to R</a>
+    <li><a href="r-intro">Introduction</a>
+    <li><a href="datatypes">Data Types</a>
+    <li><a href="operations">Operations and Indexing</a>
+    <li><a href="regression">Regression</a>
 </ul>
 </main>
