update TA office hours

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -14,7 +14,12 @@ stylesheet: /css/main.css?v=1
 
   <dt>Teaching Fellow</dt>
   <dd>Adarsh Gupta (amg836@stern.nyu.edu)</dd>
-  <dd>Office Hours: Tuesday, Wednesday, 11:00AM&ndash;12:00PM, Tisch UC-01</dd>
+  <dd>Office Hours:
+    <ul>
+      <li>Tuesday, 11:00AM&ndash;12:00PM, Tisch UC-01
+      <li>Wednesday, 11:00AM&ndash;12:00PM, Tisch UC-11 (note different room)
+    </ul>
+  </dd>
 </dl>
 
 <h2>Lecture Notes</h2>
