--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -13,5 +13,12 @@ stylesheet: /css/main.css?v=1
 <ul>
   <li><a href="handout/syllabus.pdf">Syllabus</a>
   <li><a href="http://goo.gl/hs16Kk">Class Survey</a>
+  <li><a href="hw/hw01.pdf">Homework 1</a> (Due Sep.&nbsp;29)
+    <ul>
+      <li><a href="data/CelebrityEarnings.CSV">CelebrityEarnings.CSV</a>
+      <li><a href="data/MARKET.CSV">MARKET.CSV</a>
+      <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
+      <li><a href="data/USDomesticBeer.CSV">USDomesticBeer.CSV</a>
+    </ul>
 </ul>
 </main>
