Update office hours

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -6,6 +6,19 @@ stylesheet: /css/main.css?v=1
 <main class="wrapper">
 <h1>COR1-GB.1305: Statistics and Data&nbsp;Analysis</h1>
 
+
+<h2>Course Staff</h2>
+<dl>
+  <dt>Instructor</dt>
+  <dd>Prof. Perry (pperry@stern.nyu.edu)</dd>
+  <dd>Office Hours: Thursday 11:00AM&ndash;12:30PM, KMC 8-63 (or by appointment)</dd>
+
+  <dt>Teaching Fellow</dt>
+  <dd>Lawrence Roitman (sr297@stern.nyu.edu)</dd>
+  <dd>Office Hours: Thursday 6:00PM&ndash;7:30PM, KMC 8th Floor (near mailboxes)</dd>
+</dl>
+
+
 <h2>Lecture Notes</h2>
 </ul>
 
