Add cor1305 notes

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -20,6 +20,11 @@ stylesheet: /css/main.css?v=1
 
 
 <h2>Lecture Notes</h2>
+<ul>
+    <li><a href="lecture/sampling.pdf">Sep 22 (1) - Sampling / Descriptive Statistics 1</a>
+      (<a href="lecture/sampling-sol.pdf">Solutions</a>)
+    <li><a href="lecture/descrip.pdf">Sep 22 (2) - Descriptive Statistics 2</a>
+      (<a href="lecture/descrip-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
