Add Bayes' / Discrete

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -50,6 +50,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/conditional-prob-sol.pdf">Solutions</a>)
   <li><a href="lecture/indep.pdf">Sep 18 - Independence</a>
     (<a href="lecture/indep-sol.pdf">Solutions</a>)
+  <li><a href="lecture/bayes-discrete.pdf">Sep 22 - Bayes' Rule / Discrete Random Variables</a>
+    (<a href="lecture/bayes-discrete-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
