Add link to cor1305

--- a/courses/index.html
+++ b/courses/index.html
@@ -6,7 +6,22 @@ title: Patrick O. Perry - Courses
 <div class="courses">
   <dl>
     <dt>
-    <a href="/course/ub0103">Statistics for Business Control and Regression Models</a>
+      <a href="/course/honors">Honors Seminar (Undergrad)</a>
+    </dt>
+    <dd>
+      Overview of inferential statistics and an introduction to R.
+    </dd>
+
+    <dt>
+    <a href="/course/cor1305">Statistics and Data Analysis (MBA)</a>
+    </dt>
+    <dd>
+      Fundamental notions of data presentation and data analysis; using statistical thinking
+      in the context of business problems.
+    </dd>
+
+    <dt>
+    <a href="/course/ub0103">Statistics for Business Control and Regression Models (Undergrad)</a>
     </dt>
     <dd>
       Descriptive statistics, probability, inferential statistics, linear
@@ -14,18 +29,10 @@ title: Patrick O. Perry - Courses
     </dd>
 
     <dt>
-      <a href="/course/ssd">Statistics for Social Data</a>
+      <a href="/course/ssd">Statistics for Social Data (PhD)</a>
     </dt>
     <dd>
       Statistical methods for describing and utilizing nontraditional data modalities arising from social processes.
     </dd>
-
-    <dt>
-      <a href="/course/honors">Undergraduate Honors Seminar</a>
-    </dt>
-    <dd>
-      Overview of inferential statistics and an introduction to R.
-    </dd>
-
   </dl>      
 </div>
