Fix TF email address

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -14,7 +14,7 @@ stylesheet: /css/main.css?v=1
   <dd>Office Hours: Thursday 11:00AM&ndash;12:30PM, KMC 8-63 (or by appointment)</dd>
 
   <dt>Teaching Fellow</dt>
-  <dd>Lawrence Roitman (sr297@stern.nyu.edu)</dd>
+  <dd>Lawrence Roitman (lsr297@stern.nyu.edu)</dd>
   <dd>Office Hours: Thursday 6:00PM&ndash;7:30PM, KMC 8th Floor (near mailboxes)</dd>
 </dl>
 
