Add missing lecture notes

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -52,6 +52,10 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/indep-sol.pdf">Solutions</a>)
   <li><a href="lecture/bayes-discrete.pdf">Sep 22 - Bayes' Rule / Discrete Random Variables</a>
     (<a href="lecture/bayes-discrete-sol.pdf">Solutions</a>)
+  <li><a href="lecture/expect-var.pdf">Sep 24 - Expectation and Variance</a>
+    (<a href="lecture/expect-var-sol.pdf">Solutions</a>)
+  <li><a href="lecture/binom-pois.pdf">Sep 25 - Binomial and Poisson Random Variables</a>
+    (<a href="lecture/binom-pois-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
