Add hw4, hw2sol

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -69,7 +69,8 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/97EMPLOY.CSV">97EMPLOY.CSV</a>
       <li><a href="data/HONEYCOUGH.CSV">HONEYCOUGH.CSV</a>
     </ul>
-  <li><a href="hw/hw02.pdf">Homework #2</a> (Due Sep&nbsp;17)
+  <li><a href="hw/hw02.pdf">Homework #2</a>
+    (<a href="hw/hw02sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/PINPADS.CSV">PINPADS.CSV</a>
     </ul>
@@ -82,5 +83,6 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="data/SWDEFECTS.CSV">SWDEFECTS.CSV</a>
     </ul>
+  <li><a href="hw/hw04.pdf">Homework #4</a> (Due Oct&nbsp;1)
 </ul>
 </main>
