Add sample midterm 1

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -83,6 +83,13 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="data/SWDEFECTS.CSV">SWDEFECTS.CSV</a>
     </ul>
+  <li><a href="handout/midterm1.pdf">Sample Midterm 1</a>
+    <ul>
+      <li>The midterm will take place in class on Thursday, Oct&nbsp;3
+      <li>Bring a calculator and one page of notes (front &amp; back)
+      <li>Problem 6 requires knowledge of Poisson random variables; this material will not be
+      covered on the actual midterm
+    </ul>
   <li><a href="hw/hw04.pdf">Homework #4</a> (Due Oct&nbsp;1)
 </ul>
 </main>
