Add link to video for cor1305

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -21,11 +21,18 @@ stylesheet: /css/main.css?v=1
 
 <h2>Lecture Notes</h2>
 <ul>
-    <li><a href="lecture/sampling.pdf">Sep 22 (1) - Sampling / Descriptive Statistics 1</a>
-      (<a href="lecture/sampling-sol.pdf">Solutions</a>)
-    <li><a href="lecture/descrip.pdf">Sep 22 (2) - Descriptive Statistics 2</a>
-      (<a href="lecture/descrip-sol.pdf">Solutions</a>)
+  <li><a href="lecture/sampling.pdf">Sep 22 (1) - Sampling / Descriptive Statistics 1</a>
+    (<a href="lecture/sampling-sol.pdf">Solutions</a>)
+  <li><a href="lecture/descrip.pdf">Sep 22 (2) - Descriptive Statistics 2</a>
+    (<a href="lecture/descrip-sol.pdf">Solutions</a>)
 </ul>
+
+
+<h2>Lecture Videos</h2>
+<ul>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e93a6fb81c29453db4d40357c77114241d">Sep 22</a>
+</ul>
+
 
 <h2>Handouts and Assignments</h2>
 <ul>
