Add pois-hgeom handout

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -55,15 +55,17 @@ stylesheet: /css/main.css?v=1
   <li><a href="lecture/expect-var.pdf">Sep 24 - Expectation and Variance</a>
     (<a href="lecture/expect-var-sol.pdf">Solutions</a>)
   <li><a href="lecture/binom-pois.pdf">Sep 25 - Binomial and Poisson Random Variables</a>
-  (<a href="lecture/binom-pois-sol.pdf">Solutions</a>;
-   <a href="http://nyustern.mediasite.com/Mediasite/Play/a938fb3158b244c99629d4aea1d227181d">Video</a>)
-   <ul>
-     <li>We did not have time to cover Poisson random variables, so this
-       material will not be tested on Midterm&nbsp;1.
-     <li>To watch the video, you may need to go log on to
-       <a href=http://vpn.stern.nyu.edu/>vpn.stern.nyu.edu</a> and click
-       &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
-   </ul>
+    (<a href="lecture/binom-pois-sol.pdf">Solutions</a>;
+     <a href="http://nyustern.mediasite.com/Mediasite/Play/a938fb3158b244c99629d4aea1d227181d">Video</a>)
+    <ul>
+      <li>We did not have time to cover Poisson random variables, so this
+        material will not be tested on Midterm&nbsp;1.
+      <li>To watch the video, you may need to go log on to
+        <a href=http://vpn.stern.nyu.edu/>vpn.stern.nyu.edu</a> and click
+        &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
+    </ul>
+  <li><a href="lecture/pois-hgeom.pdf">Sep 29 - Poisson / Empirical Rule Approximations / Hypergeometric</a>
+    (<a href="lecture/pois-hgeom-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
