--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -25,6 +25,10 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/sampling-sol.pdf">Solutions</a>)
   <li><a href="lecture/descrip.pdf">Sep 22 (2) - Descriptive Statistics 2</a>
     (<a href="lecture/descrip-sol.pdf">Solutions</a>)
+  <li><a href="lecture/prob.pdf">Sep 29 (1) - Probability</a>
+    (<a href="lecture/prob-sol.pdf">Solutions</a>)
+  <li><a href="lecture/cond-prob.pdf">Sep 29 (2) - Conditional Probability</a>
+    (<a href="lecture/cond-prob-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -46,5 +50,6 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/USDomesticBeer.CSV">USDomesticBeer.CSV</a>
     </ul>
+  <li><a href="hw/hw02.pdf">Homework 2</a> (Due Oct.&nbsp;6)
 </ul>
 </main>
