Add video link + directions

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -35,7 +35,11 @@ stylesheet: /css/main.css?v=1
 <h2>Lecture Videos</h2>
 <ul>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e93a6fb81c29453db4d40357c77114241d">Sep 22</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e1e4bfe187d941b8a751d7f8f2e886b11d">Sep 29</a>
 </ul>
+<p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
+  and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
+</p>
 
 
 <h2>Handouts and Assignments</h2>
