Add midterm1 solutions

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -95,6 +95,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/SWDEFECTS.CSV">SWDEFECTS.CSV</a>
     </ul>
   <li><a href="handout/midterm1.pdf">Sample Midterm 1</a>
+    (<a href="handout/midterm1sol.txt">Solutions</a>)
     <ul>
       <li>The midterm will take place in class on Thursday, Oct&nbsp;3
       <li>Bring a calculator and one page of notes (front &amp; back)
