Add normal handout and normal cdf table

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -66,6 +66,8 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="lecture/pois-hgeom.pdf">Sep 29 - Poisson / Empirical Rule Approximations / Hypergeometric</a>
     (<a href="lecture/pois-hgeom-sol.pdf">Solutions</a>)
+  <li><a href="lecture/normal.pdf">Oct 6 - Normal Random Variables</a>
+    (<a href="lecture/normal-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
@@ -103,5 +105,6 @@ stylesheet: /css/main.css?v=1
       covered on the actual midterm
     </ul>
   <li><a href="hw/hw04.pdf">Homework #4</a> (Due Oct&nbsp;1)
+  <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
 </ul>
 </main>
