--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -29,6 +29,10 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/prob-sol.pdf">Solutions</a>)
   <li><a href="lecture/cond-prob.pdf">Sep 29 (2) - Conditional Probability</a>
     (<a href="lecture/cond-prob-sol.pdf">Solutions</a>)
+  <li><a href="lecture/randvar.pdf">Oct 6 (1) - Random Variables</a>
+    (<a href="lecture/randvar-sol.pdf">Solutions</a>)
+  <li><a href="lecture/counts.pdf">Oct 6 (2) - Models for Counts</a>
+    (<a href="lecture/counts-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -36,6 +40,7 @@ stylesheet: /css/main.css?v=1
 <ul>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e93a6fb81c29453db4d40357c77114241d">Sep 22</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e1e4bfe187d941b8a751d7f8f2e886b11d">Sep 29</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/c58f11fe5423450c8d166daeee0b53c91d">Oct 6</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
@@ -47,7 +52,8 @@ stylesheet: /css/main.css?v=1
   <li><a href="handout/syllabus.pdf">Syllabus</a>
   <li><a href="http://goo.gl/hs16Kk">Class Survey</a>
   <li><a href="handout/minitab-tips.pdf">Minitab Tips</a>
-  <li><a href="hw/hw01.pdf">Homework 1</a> (Due Sep.&nbsp;29)
+  <li><a href="hw/hw01.pdf">Homework 1</a>
+    (<a href="hw/hw01sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/CelebrityEarnings.CSV">CelebrityEarnings.CSV</a>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
@@ -55,5 +61,6 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/USDomesticBeer.CSV">USDomesticBeer.CSV</a>
     </ul>
   <li><a href="hw/hw02.pdf">Homework 2</a> (Due Oct.&nbsp;6)
+  <li><a href="hw/hw03.pdf">Homework 3</a> (Due Oct.&nbsp;13)
 </ul>
 </main>
