--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -104,7 +104,9 @@ stylesheet: /css/main.css?v=1
       <li>Problem 6 requires knowledge of Poisson random variables; this material will not be
       covered on the actual midterm
     </ul>
-  <li><a href="hw/hw04.pdf">Homework #4</a> (Due Oct&nbsp;1)
+  <li><a href="hw/hw04.pdf">Homework #4</a>
+    (<a href="hw/hw04sol.pdf">Solutions</a>)
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
+  <li><a href="hw/hw05.pdf">Homework #4</a> (Due Oct&nbsp;15)
 </ul>
 </main>
