Add missing lecture notes; links to video

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -68,6 +68,11 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/pois-hgeom-sol.pdf">Solutions</a>)
   <li><a href="lecture/normal.pdf">Oct 6 - Normal Random Variables</a>
     (<a href="lecture/normal-sol.pdf">Solutions</a>)
+  <li><a href="lecture/sampling.pdf">Oct 8 - Sampling Distributions</a>
+    (<a href="lecture/sampling-sol.pdf">Solutions</a>)
+  <li><a href="lecture/clt.pdf">Oct 9 - The Central Limit Theorem</a>
+    (<a href="lecture/clt-sol.pdf">Solutions</a>;
+     <a href="http://nyustern.mediasite.com/Mediasite/Play/fd1a1921970e49eca9eb2b391ca217091d">Video</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
