--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -33,6 +33,13 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/randvar-sol.pdf">Solutions</a>)
   <li><a href="lecture/counts.pdf">Oct 6 (2) - Models for Counts</a>
     (<a href="lecture/counts-sol.pdf">Solutions</a>)
+  <li><a href="lecture/normal.pdf">Oct 13 (1) - The Normal Model</a>
+    (<a href="lecture/normal-sol.pdf">Solutions</a>)
+  <li><a href="lecture/clt.pdf">Oct 13 (2) - The Central Limit Theorem</a>
+    (<a href="lecture/clt-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="http://onlinestatbook.com/stat_sim/sampling_dist/">Central Limit Theorem Demo</a>
+    </ul>
 </ul>
 
 
@@ -40,7 +47,8 @@ stylesheet: /css/main.css?v=1
 <ul>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e93a6fb81c29453db4d40357c77114241d">Sep 22</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e1e4bfe187d941b8a751d7f8f2e886b11d">Sep 29</a>
-  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/c58f11fe5423450c8d166daeee0b53c91d">Oct 6</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/c58f11fe5423450c8d166daeee0b53c91d">Oct  6</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/92863ae858d14e5ab38cb29bbb24322c1d">Oct 13</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
@@ -60,7 +68,11 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/USDomesticBeer.CSV">USDomesticBeer.CSV</a>
     </ul>
-  <li><a href="hw/hw02.pdf">Homework 2</a> (Due Oct.&nbsp;6)
+  <li><a href="hw/hw02.pdf">Homework 2</a>
+    (<a href="hw/hw02sol.pdf">Solutions</a>)
   <li><a href="hw/hw03.pdf">Homework 3</a> (Due Oct.&nbsp;13)
+  <li><a href="hw/hw04.pdf">Homework 4</a> (Due Oct.&nbsp;20)
+  <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
+  <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
 </ul>
 </main>
