Add sample midterm

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -74,5 +74,6 @@ stylesheet: /css/main.css?v=1
   <li><a href="hw/hw04.pdf">Homework 4</a> (Due Oct.&nbsp;20)
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
+  <li><a href="handout/midterm.pdf">Sample Midterm</a>
 </ul>
 </main>
