--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -120,5 +120,6 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/PANEL.CSV">PANEL.CSV</a>
     </ul>
+  <li><a href="handout/t-table.pdf">Critical Values of t</a>
 </ul>
 </main>
