Add confint handouts

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -73,6 +73,11 @@ stylesheet: /css/main.css?v=1
   <li><a href="lecture/clt.pdf">Oct 9 - The Central Limit Theorem</a>
     (<a href="lecture/clt-sol.pdf">Solutions</a>;
      <a href="http://nyustern.mediasite.com/Mediasite/Play/fd1a1921970e49eca9eb2b391ca217091d">Video</a>)
+  <li><a href="lecture/confint-intro.pdf">Oct 15 - Introduction to Confidence Intervals</a>
+    (<a href="lecture/confint-intro-sol.pdf">Solutions</a>)
+  <li><a href="lecture/confint.pdf">Oct 16 - Confidence Intervals</a>
+    (<a href="lecture/confint-sol.pdf">Solutions</a>;
+     <a href="http://nyustern.mediasite.com/Mediasite/Play/ec72e29325504e9ba3f114ab1b50d8f71d">Video</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
