Add confint2 handout

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -78,6 +78,8 @@ stylesheet: /css/main.css?v=1
   <li><a href="lecture/confint.pdf">Oct 16 - Confidence Intervals</a>
     (<a href="lecture/confint-sol.pdf">Solutions</a>;
      <a href="http://nyustern.mediasite.com/Mediasite/Play/ec72e29325504e9ba3f114ab1b50d8f71d">Video</a>)
+  <li><a href="lecture/confint2.pdf">Oct 20 - More Confidence Intervals</a>
+    (<a href="lecture/confint2-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
