--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -40,6 +40,10 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="http://onlinestatbook.com/stat_sim/sampling_dist/">Central Limit Theorem Demo</a>
     </ul>
+  <li><a href="lecture/confint-mean.pdf">Oct 20 (1) - Confidence Interval for Population Mean</a>
+    (<a href="lecture/confint-mean-sol.pdf">Solutions</a>)
+  <li><a href="lecture/confint-prop.pdf">Oct 20 (2) - Confidence Interval for Population Proportion</a>
+    (<a href="lecture/confint-prop-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -49,6 +53,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e1e4bfe187d941b8a751d7f8f2e886b11d">Sep 29</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/c58f11fe5423450c8d166daeee0b53c91d">Oct  6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/92863ae858d14e5ab38cb29bbb24322c1d">Oct 13</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a9a923cc590948d0acab08ec58648f0e1d">Oct 20</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
@@ -70,10 +75,12 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="hw/hw02.pdf">Homework 2</a>
     (<a href="hw/hw02sol.pdf">Solutions</a>)
-  <li><a href="hw/hw03.pdf">Homework 3</a> (Due Oct.&nbsp;13)
+  <li><a href="hw/hw03.pdf">Homework 3</a>
+    (<a href="hw/hw03sol.pdf">Solutions</a>)
   <li><a href="hw/hw04.pdf">Homework 4</a> (Due Oct.&nbsp;20)
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
+  <li><a href="handout/t-table.pdf">T-Table: Percentiles of Student's t distribution</a>
 </ul>
 </main>
