Fix broken link

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -81,6 +81,6 @@ stylesheet: /css/main.css?v=1
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
-  <li><a href="handout/t-table.pdf">T-Table: Percentiles of Student's t distribution</a>
+  <li><a href="handout/t-percentile.pdf">T-Table: Percentiles of Student's t distribution</a>
 </ul>
 </main>
