--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -128,5 +128,11 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/PANEL.CSV">PANEL.CSV</a>
     </ul>
   <li><a href="handout/t-table.pdf">Critical Values of t</a>
+  <li><a href="hw/hw07.pdf">Homework #7</a>
+    (Due Oct&nbsp;22)
+    <ul>
+      <li><a href="data/RPIPE.CSV">RPIPE.CSV</a>
+      <li><a href="data/TEES.CSV">TEES.CSV</a>
+    </ul>
 </ul>
 </main>
