Add missing handouts

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -80,6 +80,10 @@ stylesheet: /css/main.css?v=1
      <a href="http://nyustern.mediasite.com/Mediasite/Play/ec72e29325504e9ba3f114ab1b50d8f71d">Video</a>)
   <li><a href="lecture/confint2.pdf">Oct 20 - More Confidence Intervals</a>
     (<a href="lecture/confint2-sol.pdf">Solutions</a>)
+  <li><a href="lecture/htest.pdf">Oct 22 - Intro to Hypothesis Tests</a>
+    (<a href="lecture/htest-sol.pdf">Solutions</a>)
+  <li><a href="lecture/htest2.pdf">Oct 23 - Hypothesis Tests 2</a>
+    (<a href="lecture/htest2-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
