Add HW4Sol, link to video

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -54,6 +54,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/c58f11fe5423450c8d166daeee0b53c91d">Oct  6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/92863ae858d14e5ab38cb29bbb24322c1d">Oct 13</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a9a923cc590948d0acab08ec58648f0e1d">Oct 20</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/db9d99d1776344b3886ae96c8035f58b1d">Oct 23 (Review Session)</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
@@ -77,7 +78,8 @@ stylesheet: /css/main.css?v=1
     (<a href="hw/hw02sol.pdf">Solutions</a>)
   <li><a href="hw/hw03.pdf">Homework 3</a>
     (<a href="hw/hw03sol.pdf">Solutions</a>)
-  <li><a href="hw/hw04.pdf">Homework 4</a> (Due Oct.&nbsp;20)
+  <li><a href="hw/hw04.pdf">Homework 4</a>
+    (<a href="hw/hw04sol.pdf">Solutions</a>)
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
