--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -79,7 +79,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="hw/hw03.pdf">Homework 3</a>
     (<a href="hw/hw03sol.pdf">Solutions</a>)
   <li><a href="hw/hw04.pdf">Homework 4</a>
-    (<a href="hw/hw04sol.pdf">Solutions</a>)
+    (<a href="hw/hw04sol.pdf">Solutions</a> <em>Updated 10/24 1:05 PM</em>)
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
