Add slected answers to midterm

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -83,6 +83,10 @@ stylesheet: /css/main.css?v=1
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
+    <ul>
+       <li>Selected Answers: 3a: 0.83; 3b: 1.83; 4: A; 5: B; 6: D; 7: D; 8a: B; 8b: E;
+        9: C; 10: C; 11: B; 12: A.
+    </ul>
   <li><a href="handout/t-percentile.pdf">T-Table: Percentiles of Student's t distribution</a>
 </ul>
 </main>
