--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -88,5 +88,11 @@ stylesheet: /css/main.css?v=1
         9: C; 10: C; 11: B; 12: A.
     </ul>
   <li><a href="handout/t-percentile.pdf">T-Table: Percentiles of Student's t distribution</a>
+  <li><a href="hw/hw05.pdf">Homework 5</a>
+    (Due Nov.&nbsp;3)
+    <ul>
+      <li><a href="data/MARKET.CSV">MARKET.CSV</a>
+      <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
+    </ul>
 </ul>
 </main>
