Add htest3 handout

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -84,6 +84,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/htest-sol.pdf">Solutions</a>)
   <li><a href="lecture/htest2.pdf">Oct 23 - Hypothesis Tests 2</a>
     (<a href="lecture/htest2-sol.pdf">Solutions</a>)
+  <li><a href="lecture/htest3.pdf">Oct 27 - Hypothesis Tests 3</a>
+    (<a href="lecture/htest3-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
