--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -86,6 +86,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/htest2-sol.pdf">Solutions</a>)
   <li><a href="lecture/htest3.pdf">Oct 27 - Hypothesis Tests 3</a>
     (<a href="lecture/htest3-sol.pdf">Solutions</a>)
+  <li><a href="lecture/htest4.pdf">Oct 29 - Hypothesis Tests 4</a>
+    (<a href="lecture/htest4-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
@@ -114,7 +116,7 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="data/SWDEFECTS.CSV">SWDEFECTS.CSV</a>
     </ul>
-  <li><a href="handout/midterm1.pdf">Sample Midterm 1</a>
+  <li><a href="handout/midterm1.pdf">Sample Midterm #1</a>
     (<a href="handout/midterm1sol.txt">Solutions</a>)
     <ul>
       <li>The midterm will take place in class on Thursday, Oct&nbsp;3
@@ -125,9 +127,10 @@ stylesheet: /css/main.css?v=1
   <li><a href="hw/hw04.pdf">Homework #4</a>
     (<a href="hw/hw04sol.pdf">Solutions</a>)
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
-  <li><a href="hw/hw05.pdf">Homework #5</a> (Due Oct&nbsp;15)
+  <li><a href="hw/hw05.pdf">Homework #5</a>
+    (<a href="hw/hw05sol.pdf">Solutions</a>)
   <li><a href="hw/hw06.pdf">Homework #6</a>
-    (Due Oct&nbsp;22)
+    (<a href="hw/hw06sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/CEOPAY.CSV">CEOPAY.CSV</a>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
@@ -135,10 +138,21 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="handout/t-table.pdf">Critical Values of t</a>
   <li><a href="hw/hw07.pdf">Homework #7</a>
-    (Due Oct&nbsp;22)
+    (Due Oct&nbsp;29)
     <ul>
       <li><a href="data/RPIPE.CSV">RPIPE.CSV</a>
       <li><a href="data/TEES.CSV">TEES.CSV</a>
+    </ul>
+  <li><a href="hw/hw08.pdf">Homework #8</a>
+    (Due Nov&nbsp;5)
+    <ul>
+      <li><a href="data/HONEYCOUGH.CSV">HONEYCOUGH.CSV</a>
+    </ul>
+  <li><a href="hw/module2.pdf">Project Module #2</a>
+  <li><a href="handout/midterm2.pdf">Sample Midterm #2</a>
+    <ul>
+      <li>The midterm will take place in class on Thursday, Nov&nbsp;6
+      <li>Bring a calculator and one page of notes (front &amp; back)
     </ul>
 </ul>
 </main>
