--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -88,6 +88,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/htest3-sol.pdf">Solutions</a>)
   <li><a href="lecture/htest4.pdf">Oct 29 - Hypothesis Tests 4</a>
     (<a href="lecture/htest4-sol.pdf">Solutions</a>)
+  <li><a href="lecture/twosample-unpaired.pdf">Oct 30 - Comparing Two Populations</a>
+    (<a href="lecture/twosample-unpaired-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
