Add link to bike data

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -90,6 +90,9 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/htest4-sol.pdf">Solutions</a>)
   <li><a href="lecture/twosample-unpaired.pdf">Oct 30 - Comparing Two Populations</a>
     (<a href="lecture/twosample-unpaired-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="http://drianwalker.com/overtaking/">Ian Walker's Bike Overtaking Study</a>
+    </ul>
 </ul>
 
 <h2>Handouts and Assignments</h2>
