--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -44,6 +44,13 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/confint-mean-sol.pdf">Solutions</a>)
   <li><a href="lecture/confint-prop.pdf">Oct 20 (2) - Confidence Interval for Population Proportion</a>
     (<a href="lecture/confint-prop-sol.pdf">Solutions</a>)
+  <li><a href="lecture/htest.pdf">Nov 3 (1) - Hypothesis Tests</a>
+    (<a href="lecture/htest-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/ibm.csv">ibm.csv</a>
+    </ul>
+  <li><a href="lecture/htest2.pdf">Nov 3 (2) - Hypothesis Tests 2</a>
+    (<a href="lecture/htest2-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -55,6 +62,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/92863ae858d14e5ab38cb29bbb24322c1d">Oct 13</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a9a923cc590948d0acab08ec58648f0e1d">Oct 20</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/db9d99d1776344b3886ae96c8035f58b1d">Oct 23 (Review Session)</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/817ff4f92aee4ec09e7b67c323bb38911d">Nov 3</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
