Add DOW figure, link to forecasting course

--- a/courses/index.html
+++ b/courses/index.html
@@ -6,6 +6,14 @@ title: Patrick O. Perry - Courses
 <div class="courses">
   <dl>
     <dt>
+      <a href="/course/forecasting">Forecasting Time Series Data (MBA/MS/Undergrad)</a>
+    </dt>
+    <dd>
+      Practical time series forecasting with particular emphasis on the
+      Box-Jenkings (ARIMA) method and conditional volatility (ARCH) models.
+    </dd>
+
+    <dt>
       <a href="/course/honors">Honors Seminar (Undergrad)</a>
     </dt>
     <dd>
