--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -6,6 +6,8 @@ stylesheet: /css/main.css?v=1
 <main class="wrapper">
 <h1>Forecasting Time Series Data</h1>
 
+<img src="fig/dow.png" width="700" height="350"
+     style="display: block; margin-left: auto; margin-right: auto">
 
 <h2>Course Staff</h2>
 <dl>
