Add alt tag to img

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -7,6 +7,7 @@ stylesheet: /css/main.css?v=1
 <h1>Forecasting Time Series Data</h1>
 
 <img src="fig/dow.png" width="700" height="350"
+     alt="Dow Jones Industrial Average 1914-2014"
      style="display: block; margin-left: auto; margin-right: auto">
 
 <h2>Course Staff</h2>
