--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -102,5 +102,11 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
     </ul>
+  <li><a href="hw/hw06.pdf">Homework 6</a>
+    (Due Nov.&nbsp;10)
+    <ul>
+      <li><a href="data/MARKET.CSV">MARKET.CSV</a>
+      <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
+    </ul>
 </ul>
 </main>
