--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -143,7 +143,7 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="handout/t-table.pdf">Critical Values of t</a>
   <li><a href="hw/hw07.pdf">Homework #7</a>
-    (Due Oct&nbsp;29)
+    (<a href="hw/hw07sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/RPIPE.CSV">RPIPE.CSV</a>
       <li><a href="data/TEES.CSV">TEES.CSV</a>
