--- a/courses/index.html
+++ b/courses/index.html
@@ -10,7 +10,7 @@ title: Patrick O. Perry - Courses
     </dt>
     <dd>
       Practical time series forecasting with particular emphasis on the
-      Box-Jenkings (ARIMA) method and conditional volatility (ARCH) models.
+      Box-Jenkins (ARIMA) method and conditional volatility (ARCH) models.
     </dd>
 
     <dt>
