Add missing lecture handout

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -93,6 +93,8 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="http://drianwalker.com/overtaking/">Ian Walker's Bike Overtaking Study</a>
     </ul>
+  <li><a href="lecture/twosample-paired.pdf">Nov 3 - Comparing Paired and Unpaired Populations</a>
+    (<a href="lecture/twosample-paired-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
