Add midterm2 sol

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -157,6 +157,7 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="hw/module2.pdf">Project Module #2</a>
   <li><a href="handout/midterm2.pdf">Sample Midterm #2</a>
+    (<a href="handout/midterm2sol.txt">Solutions</a>)
     <ul>
       <li>The midterm will take place in class on Thursday, Nov&nbsp;6
       <li>Bring a calculator and one page of notes (front &amp; back)
