--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -95,6 +95,8 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="lecture/twosample-paired.pdf">Nov 3 - Comparing Paired and Unpaired Populations</a>
     (<a href="lecture/twosample-paired-sol.pdf">Solutions</a>)
+  <li><a href="lecture/causation.pdf">Nov 10 - Association, Correlation, and Causation</a>
+    (<a href="lecture/causation-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
