Add comparison lecture

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -51,6 +51,10 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="lecture/htest2.pdf">Nov 3 (2) - Hypothesis Tests 2</a>
     (<a href="lecture/htest2-sol.pdf">Solutions</a>)
+  <li><a href="lecture/compare.pdf">Nov 10 (1) - Comparison</a>
+    (<a href="lecture/compare-sol.pdf">Solutions</a>)
+  <li><a href="lecture/compare2.pdf">Nov 10 (2) - Comparison 2</a>
+    (<a href="lecture/compare2-sol.pdf">Solutions</a>)
 </ul>
 
 
