--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -67,6 +67,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a9a923cc590948d0acab08ec58648f0e1d">Oct 20</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/db9d99d1776344b3886ae96c8035f58b1d">Oct 23 (Review Session)</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/817ff4f92aee4ec09e7b67c323bb38911d">Nov 3</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e97af614d3ef4284a070f4a6fd1376831d">Nov 10</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
