--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -102,16 +102,22 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="handout/t-percentile.pdf">T-Table: Percentiles of Student's t distribution</a>
   <li><a href="hw/hw05.pdf">Homework 5</a>
-    (Due Nov.&nbsp;3)
+    (<a href="hw/hw05sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
     </ul>
   <li><a href="hw/hw06.pdf">Homework 6</a>
-    (Due Nov.&nbsp;10)
+    (<a href="hw/hw06sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
+    </ul>
+  <li><a href="hw/hw07.pdf">Homework 7</a>
+    (Due Nov. 17)
+    <ul>
+      <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
+      <li><a href="data/retail_sales.csv">retail_sales.csv</a>
     </ul>
 </ul>
 </main>
