Add hw, new lecture

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -97,6 +97,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/twosample-paired-sol.pdf">Solutions</a>)
   <li><a href="lecture/causation.pdf">Nov 10 - Association, Correlation, and Causation</a>
     (<a href="lecture/causation-sol.pdf">Solutions</a>)
+  <li><a href="lecture/covariance.pdf">Nov 12 - Covariance</a>
+    (<a href="lecture/covariance-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
@@ -163,6 +165,11 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li>The midterm will take place in class on Thursday, Nov&nbsp;6
       <li>Bring a calculator and one page of notes (front &amp; back)
+    </ul>
+  <li><a href="hw/hw09.pdf">Homework #9</a>
+    (Due Nov&nbsp;19)
+    <ul>
+      <li><a href="data/Ojuice.CSV">Ojuice.CSV</a>
     </ul>
 </ul>
 </main>
