Add reg-intro handout

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -99,6 +99,11 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/causation-sol.pdf">Solutions</a>)
   <li><a href="lecture/covariance.pdf">Nov 12 - Covariance</a>
     (<a href="lecture/covariance-sol.pdf">Solutions</a>)
+  <li><a href="lecture/reg-intro.pdf">Nov 13 - Introduction to Linear Regression</a>
+    (<a href="lecture/reg-intro-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/mealsData.csv">mealsData.csv</a>
+    </ul>
 </ul>
 
 <h2>Handouts and Assignments</h2>
