--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -104,6 +104,12 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
+  <li><a href="lecture/reg-assumptions.pdf">Nov 17 - Regression Model Assumptions</a>
+    (<a href="lecture/reg-assumptions-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/Village.CSV">Village.CSV</a>
+      <li><a href="data/mealsData.csv">mealsData.csv</a>
+    </ul>
 </ul>
 
 <h2>Handouts and Assignments</h2>
