Add new handout, video link

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -55,6 +55,13 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/compare-sol.pdf">Solutions</a>)
   <li><a href="lecture/compare2.pdf">Nov 10 (2) - Comparison 2</a>
     (<a href="lecture/compare2-sol.pdf">Solutions</a>)
+  <li><a href="lecture/assoc.pdf">Nov 17 (1) - Association and Causation</a>
+    (<a href="lecture/assoc-sol.pdf">Solutions</a>)
+  <li><a href="lecture/reg-intro.pdf">Nov 17 (2) - Introduction to Linear Regression</a>
+    (<a href="lecture/reg-intro-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/mealsData.csv">mealsData.csv</a>
+    </ul>
 </ul>
 
 
@@ -68,6 +75,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/db9d99d1776344b3886ae96c8035f58b1d">Oct 23 (Review Session)</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/817ff4f92aee4ec09e7b67c323bb38911d">Nov 3</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e97af614d3ef4284a070f4a6fd1376831d">Nov 10</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/c66be5aab44f4b1aadbb1f4eadc698321d">Nov 17</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
