Add reg-inference handout

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -110,6 +110,8 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/Village.CSV">Village.CSV</a>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
+  <li><a href="lecture/reg-inference.pdf">Nov 19 - Regression Inference and Forecasting</a>
+    (<a href="lecture/reg-inference-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
