--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -112,6 +112,8 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="lecture/reg-inference.pdf">Nov 19 - Regression Inference and Forecasting</a>
     (<a href="lecture/reg-inference-sol.pdf">Solutions</a>)
+  <li><a href="lecture/outliers.pdf">Nov 20 - Outliers, Leverage Points, and Influential Points</a>
+    (<a href="lecture/outliers-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
