Add reg-multiple handout

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -114,6 +114,12 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/reg-inference-sol.pdf">Solutions</a>)
   <li><a href="lecture/outliers.pdf">Nov 20 - Outliers, Leverage Points, and Influential Points</a>
     (<a href="lecture/outliers-sol.pdf">Solutions</a>)
+  <li><a href="lecture/reg-multiple.pdf">Nov 24 - Multiple Regression, F Tests</a>
+    (<a href="lecture/reg-multiple-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/EASTON.CSV">EASTON.CSV</a>
+      <li><a href="data/mealsData.csv">mealsData.csv</a>
+    </ul>
 </ul>
 
 <h2>Handouts and Assignments</h2>
