--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -192,5 +192,11 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="data/Ojuice.CSV">Ojuice.CSV</a>
     </ul>
+  <li><a href="hw/hw10.pdf">Homework #10</a>
+    (Due Dec&nbsp;3)
+    <ul>
+      <li><a href="data/LIQUIDSPILL.CSV">LIQUIDSPILL.CSV</a>
+      <li><a href="data/DefaultInt.CSV">DefaultInt.CSV</a>
+    </ul>
 </ul>
 </main>
