Add link to review session video

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -120,6 +120,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/EASTON.CSV">EASTON.CSV</a>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
+  <li>Nov 25 - Review Session (<a href="http://nyustern.mediasite.com/Mediasite/Play/b1656258c398482dbf5ce05cc4f6b7f71d">Video</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
