--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -121,6 +121,12 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
   <li>Nov 25 - Review Session (<a href="http://nyustern.mediasite.com/Mediasite/Play/b1656258c398482dbf5ce05cc4f6b7f71d">Video</a>)
+  <li><a href="lecture/reg-qualvar.pdf">Dec 1 - Regression with Qualitative Variables</a>
+    (<a href="lecture/reg-qualvar-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/EASTON.CSV">EASTON.CSV</a>
+      <li><a href="data/Fall13NYUSurvey.csv">Fall13NYUSurvey.csv</a>
+    </ul>
 </ul>
 
 <h2>Handouts and Assignments</h2>
