Add new lecture materials

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -62,6 +62,15 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
+  <li><a href="lecture/reg-inference.pdf">Dec 1 (1) - Regression Inference and Forecasting</a>
+    (<a href="lecture/reg-inference-sol.pdf">Solutions</a>)
+  <li><a href="lecture/reg-diagnostics.pdf">Dec 1 (2) - Regression Diagnostics</a>
+    (<a href="lecture/reg-diagnostics-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/interest-gmat.csv">interest-gmat.csv</a>
+      <li><a href="data/mealsData.csv">mealsData.csv</a>
+      <li><a href="data/Village.CSV">Village.CSV</a>
+    </ul>
 </ul>
 
 
@@ -76,6 +85,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/817ff4f92aee4ec09e7b67c323bb38911d">Nov 3</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e97af614d3ef4284a070f4a6fd1376831d">Nov 10</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/c66be5aab44f4b1aadbb1f4eadc698321d">Nov 17</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/53f9eb2707c74e219a0b6937ed4ec8901d">Dec 1</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
