--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -137,5 +137,12 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/retail_sales.csv">retail_sales.csv</a>
     </ul>
+  <li><a href="hw/hw08.pdf">Homework 8</a>
+    (Due Dec. 8)
+    <ul>
+      <li><a href="data/DiamondPrices.CSV">DiamondPrices.CSV</a>
+      <li><a href="data/MARKET.CSV">MARKET.CSV</a>
+      <li><a href="data/PriceToEarnings.CSV">PriceToEarnings.CSV</a>
+    </ul>
 </ul>
 </main>
