Add hw7 solutions

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -132,7 +132,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
     </ul>
   <li><a href="hw/hw07.pdf">Homework 7</a>
-    (Due Nov. 17)
+    (<a href="hw/hw07sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/retail_sales.csv">retail_sales.csv</a>
